[CHECKPOINT]---Starting on JS.

--- a/main.scss
+++ b/main.scss
@@ -1,11 +1,36 @@
 /* Write in SASS/SCSS. */
 
 $primary-color: red;
+$secondary-color: blue;
+$tertiary-color: yellow;
 
-* {
+.budget_tracker--ui {
+    display: grid;
+    grid-template-columns: 4rem 4rem;
+    grid-template-rows: 5rem 5rem;
+    margin-top: 0rem;
+    border: solid rgb(0, 0, 0) 0.1rem;
+    border-radius: 1rem;
+    overflow: hidden;
+    background-color: white;
+    color: $secondary-color;
+    width: 50%;
+    text-align: center;
+    align-content: center;
+    align-self: center;
+}
+
+.budget_tracker--title {
     margin: 0;
     padding: 0;
-    color: red;
+    color: $primary-color;
 }
 
 
+.budget_tracker--result {
+    color: $secondary-color;
+}
+
+.budget_tracker--header {
+    color: orange;
+}
