--- a/style.css
+++ b/style.css
@@ -1,6 +1,30 @@
 /* Write in SASS/SCSS. */
-* {
+.budget_tracker--ui {
+  display: grid;
+  grid-template-columns: 4rem 4rem;
+  grid-template-rows: 5rem 5rem;
+  margin-top: 0rem;
+  border: solid rgb(0, 0, 0) 0.1rem;
+  border-radius: 1rem;
+  overflow: hidden;
+  background-color: white;
+  color: blue;
+  width: 50%;
+  text-align: center;
+  align-content: center;
+  align-self: center;
+}
+
+.budget_tracker--title {
   margin: 0;
   padding: 0;
   color: red;
+}
+
+.budget_tracker--result {
+  color: blue;
+}
+
+.budget_tracker--header {
+  color: orange;
 }
