--- a/main.scss
+++ b/main.scss
@@ -1,23 +1,43 @@
 /* Write in SASS/SCSS. */
 
-$primary-color: red;
-$secondary-color: blue;
-$tertiary-color: yellow;
+$primary-color: orange;
+$gradient: linear-gradient(130deg,red, blue);
+$font: font-size 1rem;
+
+* {
+    margin: 0;
+    padding: 0;
+}
+
+
+body {
+    background-image: $gradient;
+    background-repeat: no-repeat;
+    min-height: 100vh;
+    text-align: center;
+}
 
 .budget_tracker--ui {
+    min-height: 40vh;
+    max-width: 25rem;
     display: grid;
-    grid-template-columns: 4rem 4rem;
-    grid-template-rows: 5rem 5rem;
-    margin-top: 0rem;
+    grid-template-columns: 10rem;
+    place-items: center;
     border: solid rgb(0, 0, 0) 0.1rem;
     border-radius: 1rem;
     overflow: hidden;
-    background-color: white;
-    color: $secondary-color;
-    width: 50%;
-    text-align: center;
+    background-color: $gradient;
+    color: $gradient;
     align-content: center;
-    align-self: center;
+}
+
+.cal_display { 
+    grid-row-start: 1;
+    grid-row-end: 1;
+    grid-column-start: 1;
+    grid-column-end: 5;
+    color: #d6c2ff;
+    z-index: 2;
 }
 
 .budget_tracker--title {
@@ -26,11 +46,18 @@ $tertiary-color: yellow;
     color: $primary-color;
 }
 
-
 .budget_tracker--result {
-    color: $secondary-color;
+    color: $gradient;
 }
 
-.budget_tracker--header {
-    color: orange;
+.budget_tracker--button {
+    color: $primary-color;
+    background-color: $gradient;
+    width: 5rem;
+    font-size: 1rem;
+    border-radius: 1rem;
+}
+
+.budget_tracker--h {
+    font-size: 1rem;
 }
