--- a/style.css
+++ b/style.css
@@ -1,30 +1,57 @@
 /* Write in SASS/SCSS. */
+* {
+  margin: 0;
+  padding: 0;
+}
+
+body {
+  background-image: linear-gradient(130deg, red, blue);
+  background-repeat: no-repeat;
+  min-height: 100vh;
+  text-align: center;
+}
+
 .budget_tracker--ui {
+  min-height: 40vh;
+  max-width: 25rem;
   display: grid;
-  grid-template-columns: 4rem 4rem;
-  grid-template-rows: 5rem 5rem;
-  margin-top: 0rem;
+  grid-template-columns: 10rem;
+  place-items: center;
   border: solid rgb(0, 0, 0) 0.1rem;
   border-radius: 1rem;
   overflow: hidden;
-  background-color: white;
-  color: blue;
-  width: 50%;
-  text-align: center;
+  background-color: linear-gradient(130deg, red, blue);
+  color: linear-gradient(130deg, red, blue);
   align-content: center;
-  align-self: center;
+}
+
+.cal_display {
+  grid-row-start: 1;
+  grid-row-end: 1;
+  grid-column-start: 1;
+  grid-column-end: 5;
+  color: #d6c2ff;
+  z-index: 2;
 }
 
 .budget_tracker--title {
   margin: 0;
   padding: 0;
-  color: red;
+  color: orange;
 }
 
 .budget_tracker--result {
-  color: blue;
+  color: linear-gradient(130deg, red, blue);
 }
 
-.budget_tracker--header {
+.budget_tracker--button {
   color: orange;
+  background-color: linear-gradient(130deg, red, blue);
+  width: 5rem;
+  font-size: 1rem;
+  border-radius: 1rem;
+}
+
+.budget_tracker--h {
+  font-size: 1rem;
 }
